--- a/adventure_net/accounting/templates/accounting/get_operation_types.html
+++ b/adventure_net/accounting/templates/accounting/get_operation_types.html
@@ -14,7 +14,7 @@
       {{operation_type.type_name}} - {{operation_type.type_info}}
       
       <div class="buttons">
-      <a class="link" href="{% url 'accounting:chenge_operation_type' operation_type.id %}" role="button"><button class="btn btn-right" type="button"> Change</button></a>
+      <a class="link" href="{% url 'accounting:change_operation_type' operation_type.id %}" role="button"><button class="btn btn-right" type="button"> Change</button></a>
       <a class="link" href="{% url 'accounting:delete_operation_type' operation_type.id %}" role="button" class="contrast"><button class="btn btn-right" type="button"> Delete</button></a>
     </div>
     </li>
