--- a/adventure_net/mapapp/templates/mapapp/map.html
+++ b/adventure_net/mapapp/templates/mapapp/map.html
@@ -1,20 +1,34 @@
-{% extends "layouts/base.html" %} 
+{% extends "layouts/base.html" %}
 {% block title %} add user position {% endblock %}
 
 <!-- Специфічний CSS буде тут -->
-{% block stylesheets %}{% endblock stylesheets %} {% block content %}
+{% block stylesheets %}{% endblock stylesheets %} 
+{% block content %}
 
 
-<div class="modal">
-<h2>
-Sorry, this page is currently under development. We are working on improving it to provide
-you with the best user experience. Please wait, and soon you will be able to enjoy the full
-functionality of our service. Thank you for your understanding!
-</h2>
-</div>
+<!-- <div class="modal"> -->
+    <h3>Map</h3>
+    <div id="map" class="map"></div>
+    <script type="text/javascript">
+      var map = new ol.Map({
+        target: 'map',
+        layers: [
+          new ol.layer.Tile({
+            source: new ol.source.OSM()
+          })
+        ],
+        view: new ol.View({
+          center: ol.proj.fromLonLat([30.59, 50.43]),
+          zoom: 9
+        })
+      });
+    </script>
+<!-- </div> -->
 
 
 {% endblock content %}
 
 <!-- Специфічний JS буде тут  -->
-{% block javascripts %}{% endblock javascripts %}
+{% block javascripts %}
+
+{% endblock javascripts %}
