--- a/adventure_net/equipment_accounting/templates/layouts/base.html
+++ b/adventure_net/equipment_accounting/templates/layouts/base.html
@@ -13,20 +13,20 @@
     <meta name="description" content="....." />
     <meta name="keywords" content="......." />
     <meta name="author" content="..." />
-
-    <!-- fontawesome icon -->
-    <!-- <link
-      rel="stylesheet"
-      href="{{ ASSETS_ROOT }}/fonts/fontawesome/css/fontawesome-all.min.css"
-    /> -->
-    <!-- animation css -->
-    <!-- <link
-      rel="stylesheet"
-      href="{{ ASSETS_ROOT }}/plugins/animation/css/animate.min.css"
-    /> -->
+    
 
     {% load static %}
-
+    <!-- map openlayers -->
+    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.15.1/build/ol.js"></script>
+    
+    <style>
+      .map {
+        width: 100%;
+        height:400px;
+      }
+    </style>
+       
+    
     <!-- vendor css -->
     <link rel="stylesheet" href="{% static '/assets/css/style.css' %}" />
     <!-- dark mode css -->
