--- a/adventure_net/mapapp/templates/mapapp/map.html
+++ b/adventure_net/mapapp/templates/mapapp/map.html
@@ -7,7 +7,7 @@
 
 
 <!-- <div class="modal"> -->
-    <h3>Map</h3>
+    <!-- <h3>Map</h3> -->
     <div id="map" class="map"></div>
     <script type="text/javascript">
       var map = new ol.Map({
