--- a/adventure_net/users/templates/users/signup.html
+++ b/adventure_net/users/templates/users/signup.html
@@ -1,5 +1,5 @@
 {% extends "layouts/base.html" %}
-{% block title %} Singup {% endblock %}
+{% block title %} Signup {% endblock %}
 
 <!-- Специфічний CSS буде тут -->
 {% block stylesheets %}{% endblock stylesheets %} {% block content %}
